syntax = "proto3";

package tsar;

enum CompressionStage {
  INVALID_STAGE = 0;

  // compression
  ZSTD = 1;

  // data convert
  CONVERT_FLOAT64_TO_FLOAT32 = 10;
  CONVERT_FLOAT64_TO_BFLOAT16 = 11;
  CONVERT_FLOAT32_TO_BFLOAT16 = 12;

  // columnar split
  SPLIT_MANTISSA_FLOAT32 = 20;
  SPLIT_MANTISSA_FLOAT64 = 21;
  SPLIT_MANTISSA_BFLOAT16 = 22;

  // zfp
  ZFP_FLOAT32_1D = 30;
  ZFP_FLOAT64_1D = 31;
}

enum DataType {
  UNKNOWN_DATA_TYPE = 0;
  BYTE = 1;
  FLOAT32 = 2;
  FLOAT64 = 3;
  FLOAT16 = 4;
  BFLOAT16 = 5;
  INT8 = 6; 
  UINT8 = 7;
  INT16 = 8;
  UINT16 = 9;
  INT32 = 10;
  UINT32 = 11;
  INT64 = 12;
  UINT64 = 13;
}

message Blob {
  DataType data_type = 1;
  repeated int64 dims = 2;
  int64 file_offset_in_bytes = 3;
  repeated string chunk_ids = 4;
  repeated CompressionStage compression_stages = 5;
}

message BlobFile {
  string name = 1;
  repeated Blob blobs = 2;
}

message RawFile { string name = 1; }

message Bundle {
  repeated RawFile raw_files = 1;
  repeated BlobFile blob_files = 2;
}